--- a/foreman.toml
+++ b/foreman.toml
@@ -1,3 +1,4 @@
 [tools]
-rojo = 	{source = "rojo-rbx/rojo", 			version = "7.0.0" }
+rojo = 	{source = "rojo-rbx/rojo", 			version = "7.1.0" }
 wally = 	{source = "UpliftGames/wally", 		version = "0.3.1" }
+luau-analyze = {source = "JohnnyMorganz/luau-analyze-rojo", version = "0.527.0" }
