--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,5 +1,5 @@
-title = "package"  # From Git
-gitRepoUrl = "https://github.com/nightcycle/project" # From Git
+title = "node"  # From Git
+gitRepoUrl = "https://github.com/nightcycle/node/" # From Git
 
 gitSourceBranch = "master"
 changelog = true
@@ -14,7 +14,7 @@ favicon = "/"
 organizationName = "nightcycle"
 projectName = "project"
 url = "https://nightcycle.github.io"
-baseUrl = "/package/"
+baseUrl = "/node/"
 tagline = "because documenting your code is cool"
 
 [footer]
